--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 	<a href="#">enlace 3</a>
 	<a href="#">enlace 2</a>
 	<h2>prueba 2 2  2</h2>
+	<h2>prueba 2 2  2</h2>
+	<h2>prueba 2 2  2</h2>
+	<h2>prueba 2 2  2</h2>
+	<h2>prueba 2 2  2</h2>
 
 </body>
 </html>
