--- a/index.html
+++ b/index.html
@@ -4,20 +4,31 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+	<div class="wrap">
 
-	<h1>hola a todos</h1>
-	<a href="#">enlace 1</a>
-	<a href="#">enlace 2</a>
-	<a href="#">enlace 3</a>
-	<a href="#">enlace 2</a>
-	<h2>prueba 2 2  2</h2>
-	<h2>prueba 2 2  2</h2>
-	<h2>prueba 2 2  2</h2>
-	<h2>prueba 2 2  2</h2>
-	<h2>prueba 2 2  2</h2>
+		<section class="block1">
 
+			<a href="" class="icon btn-a btn-news"></a>
+			<a href="" class="icon btn-a btn-back1"></a>
+
+			<h2>Bienvenido a</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+			<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+
+			<img class="logo-v1" src="./img/element/logo.svg" alt="">
+
+			<a class="btn-1a" href="">Entrar</a>
+			<a class="btn-1b" href="">Registrarse</a>
+
+		</section>
+
+		<section class="block2">
+			<a class="link-1" href="">Términos de Servicio</a>
+		</section>
+
+	</div>
 </body>
 </html>
