separé estilo de desarrollo de la hoja de estilo principal

--- a/index.html
+++ b/index.html
@@ -5,28 +5,33 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
 	<link rel="stylesheet" href="./css/style.css">
+	<!-- <link rel="stylesheet" href="./css/dev.css"> -->
 	<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,400;0,800;1,200;1,400;1,800&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="respo"></div>
 	<div class="wrap">
 
-		<section class="block1">
+		<section class="area1">
 			<a href="" class="icon btn-a btn-news"></a>
 			<a href="" class="icon btn-a btn-back1"></a>
-			<div class="sub-block-1">
+			<div class="block1">
 				<h2>Bienvenido a</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
 				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+
+				<div class="slide">
+					
+				</div>
 			</div>
-			<div class="sub-block-2">
+			<div class="block2">
 				<img class="logo-v1" src="./img/element/logo.svg" alt="">
 				<a class="btn-1a" href="">Entrar</a>
 				<a class="btn-1a" href="">Registrarse</a>
 			</div>
 		</section>
 
-		<section class="block2">
+		<section class="area2">
 			<a class="link-1" href="">Términos de Servicio</a>
 		</section>
 
