estructure all pages

--- a/index.html
+++ b/index.html
@@ -5,33 +5,45 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
 	<link rel="stylesheet" href="./css/style.css">
-	<!-- <link rel="stylesheet" href="./css/dev.css"> -->
+	<!--<link rel="stylesheet" href="./css/dev.css">-->
 	<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,400;0,800;1,200;1,400;1,800&display=swap" rel="stylesheet">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script src="./js/slider.js"></script>
 </head>
-<body>
+
+<body class="full">
+	
 	<div class="respo"></div>
 	<div class="wrap">
 
-		<section class="area1">
-			<a href="" class="icon btn-a btn-news"></a>
-			<a href="" class="icon btn-a btn-back1"></a>
-			<div class="block1">
-				<h2>Bienvenido a</h2>
+		<section class="area-a-80">
+			<div id="slider">
+				<div class="slidesContainer">
+					<!-- pantalla 1 -->
+					<div class="slide">
+						<p>Lorem ipsum dolor sit amet</p>
+					</div>
+					<!-- pantalla 2 -->
+		    		<div class="slide">
+		    			<img src="./img/slider/slide2.jpg" alt="" />
+		    		</div>	
+		    		<!-- pantalla 3 -->
+					<div class="slide">
+						<img src="./img/slider/slide3.jpg" alt="" />
+					</div>
+				</div> 
+			</div>
+			<div class="presentation">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
 				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
-
-				<div class="slide">
-					
+				<div class="block-enter">
+					<a class="btn-1a" href="./login.html">Entrar</a>
+					<a class="btn-1b" href="./register.html">Registrarse</a>
 				</div>
-			</div>
-			<div class="block2">
-				<img class="logo-v1" src="./img/element/logo.svg" alt="">
-				<a class="btn-1a" href="">Entrar</a>
-				<a class="btn-1a" href="">Registrarse</a>
 			</div>
 		</section>
 
-		<section class="area2">
+		<section class="foot-a-20">
 			<a class="link-1" href="">Términos de Servicio</a>
 		</section>
 
