--- a/login.html
+++ b/login.html
@@ -4,14 +4,45 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/dev.css">
+	<!--
+	<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,400;0,800;1,200;1,400;1,800&display=swap" rel="stylesheet">
+	-->
 </head>
-<body>
 
-	<h1>hola a todos</h1>
-	<a href="#">enlace 1</a>
-	<a href="#">enlace 2</a>
-	<a href="#">enlace 3</a>
+<body class="full">
+	
+	<div class="respo"></div>
+	<div class="wrap">
 
+		<section class="area-b-90">
+			<h2 class="title-2">Entrar</h2>
+			<form class="form-1" action="">
+				<div>
+					<label class="tag-1a" for="fmail">Email</label>
+					<input class="field-1a" type="text"
+					id="fmail" name="fmail" placeholder="nombre@email.com" value="sandra_pardo@gmail.com">
+					<br>
+					<label class="tag-1a" for="fpass">Password</label>
+					<input class="field-1a" type="password"
+					id="fpass" name="fpass" placeholder="**********" value="**********">
+				</div>
+				<input class="btn-1a" type="submit" value="Entrar">
+			</form>
+			<a href="">¿Olvidó su contraseña?</a>
+			<div>
+				<p>Entrar con</p>
+				<a href="" class="icon btn-social btn-twitter"></a>
+				<a href="" class="icon btn-social btn-instagram"></a>
+				<a href="" class="icon btn-social btn-facebook"></a>
+			</div>
+		</section>		
+		<section class="foot-b-10">
+			<p>Términos de Servicio</p>
+		</section>
+		
+
+	</div>
 </body>
 </html>
