--- a/profile.html
+++ b/profile.html
@@ -4,14 +4,62 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="./css/style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,400;0,800;1,200;1,400;1,800&display=swap" rel="stylesheet">
 </head>
-<body>
 
-	<h1>hola a todos</h1>
-	<a href="#">enlace 1</a>
-	<a href="#">enlace 2</a>
-	<a href="#">enlace 3</a>
+<body class="page">
+	
+	<div class="respo"></div>
+	<div class="wrap">
 
+		<div class="nav-main">
+			<ul>
+				<li><a href="map.html" class="icon btn-a btn-place"></a></li>
+				<li><a href="promo.html" class="icon btn-a btn-promo"></a></li>
+				<li><a href="profile.html" class="icon btn-a btn-profile"></a></li>
+			</ul>
+		</div>
+
+		<div class="area-profile-head-image">
+			<img src="./img/user/bg.jpg" alt="">			
+		</div>
+
+		<section class="area-profile">
+			<div class="profile-infomation">
+				<img src="./img/user/profile.jpg" alt="">
+				<h3>Sandra Pardo</h3>
+				<p>Siempre doglovers. Me gusta andar por la vida descubriendo lugares y personas</p>
+			</div>	
+			<div class="profile-photos">
+				<h3>Fotos</h3>
+				<ul>
+					<li><img src="./img/user/01.jpg" alt=""></li>
+					<li><img src="./img/user/02.jpg" alt=""></li>
+					<li><img src="./img/user/03.jpg" alt=""></li>
+				</ul>
+			</div>
+			<div class="profile-places">
+				<h3>Lugares descubiertos</h3>
+				<ul>
+					<li><a class="link-a" href="">Ocean Pacific's Buque Madre</a></li>
+					<li><a class="link-a" href="">Bocanáriz</a></li>
+					<li><a class="link-a" href="">Républica Independiente del Pisco</a></li>
+					<li><a class="link-a" href="">Ocean Pacific's Buque Madre</a></li>
+					<li><a class="link-a" href="">Bocanáriz</a></li>
+					<li><a class="link-a" href="">Républica Independiente del Pisco</a></li>
+					<li><a class="link-a" href="">Ocean Pacific's Buque Madre</a></li>
+					<li><a class="link-a" href="">Bocanáriz</a></li>
+					<li><a class="link-a" href="">Républica Independiente del Pisco</a></li>
+				</ul>
+			</div>
+		</section>
+	
+		<section class="foot-c">
+			<a class="link-1" href="">Términos de Servicio</a>
+		</section>
+		
+
+	</div>
 </body>
 </html>
