dev map's mockup css

--- a/map.html
+++ b/map.html
@@ -27,8 +27,7 @@
 		<div id="panel-compass">
 	
 			<input id="panel-search" type="text" class="input-box">
-			
-		<button type="button" class="btn-result-place">test</button>
+			<!--<button type="button" class="btn-result-place">test</button>-->
 
 			<div id="panel-results"></div>
 
